@@ -1,3 +1,7 @@
+2013-04-12: tabular-simple.py
+
+	* 行形式のデータを表形式に変換する。
+
 2012-11-05: date-expand.py
 
 	* 日付文字列を展開する。
